[project]
name = "qiskit-noise-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "qiskit>=2.2.3",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-runtime>=0.43.1",
]
